# BioMANIA

./: .docker-compose.yml.swp  .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  Git2APP.md  GitRepo2BioMANIAAPP.md  README.md  README.rst  build_and_push.sh  docker-compose.yml  download_data_model.sh  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  src.configs.Base_cheatsheet.html  src.configs.Lib_cheatsheet.html  src.dataloader.get_API_composite_from_tutorial.html  src.dataloader.get_API_init_from_sourcecode.html  src.dataloader.html  src.dataloader.utils.code_download_strategy.html  src.dataloader.utils.generate_prompt.html  src.dataloader.utils.html  src.dataloader.utils.other_download.html  src.dataloader.utils.tutorial_loader_strategy.html  src.gpt.analyze_window_API_dependency.html  src.gpt.gpt_interface.html  src.html  src.inference.execution_UI.html  src.inference.html  src.inference.retriever_batch_inference.html  src.inference.retriever_bm25_inference.html  src.inference.retriever_finetune_inference.html  src.inference.utils.html  src.models.chitchat_classification_multicorpus.html  (+8 more)
.github/workflows/: codeql.yml  python-test-unit.yml  sphinx-build.yml
chatbot_ui_biomania/: Dockerfile  README.md  package-lock.json  package.json
chatbot_ui_biomania/pages/: toolrecommend.tsx
chatbot_ui_biomania/services/: useApiService.ts
chatbot_ui_biomania/types/: chat.ts  export.ts  prompt.ts  storage.ts  toolllama.ts
demo/: MIOSTONE_IBD200.html  sonata_SNARE_seq.html  sonata_SNARE_seq.json  squidpy_Analyze_imaging_mass_cytometry_data.html  tutorial_links.txt
docker_utils/MIOSTONE/: docker_start_script.sh  requirements.txt
docs/: Git2APP.md  PyPI2APP.md  Q&A.md  R2APP.md  Report_Generation.md  version_history.md
docs/source/: conf.py  src.rst  (+8 more)
examples/: MIOSTONE_IBD200.json  biopython_intro.html  chatbot_ui_history_3-15_squidpy1_ehrapy1.json  chatbot_ui_history_3-15_squidpy2.json  scanpy-Trajectory inference for hematopoiesis in mouse.html  scanpy-integrating data using ingest and BBKNN.html  scanpy_Preprocessing and clustering 3k PBMCs.html  scanpy_Preprocessing and clustering 3k PBMCs_newer_version.html  scanpy_Preprocessing_and_clustering_3k_PBMCs.json  sonata_SNARE_seq.html  squidpy_Analyze_imaging_mass_cytometry_data.html  squidpy_Analyze_imaging_mass_cytometry_data.json  squidpy_analyze_4i_data.html  squidpy_analyze_seqfish_data.html
images/: BioMANIA.icns
kubernetes/: biomania-backend-deployment.yaml  biomania-backend-service.yaml  biomania-frontend-deployment.yaml
src/: .dockerignore  Dockerfile  __init__.py  download_data_model.sh  readme.md  requirements.txt  setup.py
(+293 files in other folders)
